--- a/vs/CommandCenter.vcxproj.filters
+++ b/vs/CommandCenter.vcxproj.filters
@@ -116,8 +116,7 @@
     <ClCompile Include="..\src\SquadOrder.cpp">
       <Filter>micro</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\main_sc2api.cpp" />
-    <ClCompile Include="..\src\main_bwapi.cpp" />
+    <ClCompile Include="..\src\main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\BotAssert.h">
