Add missing libraries for Linux build
pthread and dl are required by the API.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,7 +11,7 @@ if (MSVC)
     # FIXME: put Windows specific options here.
 else ()
     set(CMAKE_CXX_FLAGS "-Wall -Wextra")
-endif()
+endif ()
 
 # Create the executable.
 add_executable(CommandCenter ${BOT_SOURCES})
@@ -19,4 +19,9 @@ target_link_libraries(CommandCenter ${SC2Api_LIBRARIES})
 
 if (APPLE)
     target_link_libraries(CommandCenter "-framework Carbon")
+endif ()
+
+# Linux specific.
+if (UNIX AND NOT APPLE)
+    target_link_libraries(CommandCenter pthread dl)
 endif ()
